# Blotter-Transform

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
blotter_transform/: __init__.py  errors.py  utils.py  warning_messages.py
tests/: test_blotter_transform.py  test_utils.py
